# jenkinstutorial

./: .gitignore  CMakeLists.txt  Jenkins_Pipeline_Setup_Summary.markdown  Jenkinsfile  README.md
src/: main.cpp
src/mathlib/: mathlib.cpp  mathlib.h
